# vtfpillow

./: README.md  setup.cfg
vtfpillow/: VTFImagePlugin.py
