[metadata]
name = vtfpillow
version = 0.0.1
author = nosoop
description = Valve Texture Format plugin for Pillow
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nosoop/vtfpillow
classifiers =
    Topic :: Multimedia :: Graphics :: Graphics Conversion

[options]
packages = find:
python_requires = >= 3.7

install_requires =
    pyvtflib @ git+https://github.com/lasa01/pyvtflib.git
    Pillow
